Removed higher code smells detected by sonarcube.